[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/MainMenu/assets/bg-pressed.png" type="Texture" id=3]
[ext_resource path="res://Menu/MainMenu/assets/bg-normal.png" type="Texture" id=4]
[ext_resource path="res://components/buttons/TextureIconButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 62
outline_size = 2
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.713726, 0.415686, 0.729412, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TextureIconButton" type="TextureButton"]
anchor_right = 0.293
anchor_bottom = 0.099
margin_right = -0.238007
margin_bottom = -0.0320053
rect_min_size = Vector2( 0, 76 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
title = "<label>"

[node name="Icon" type="TextureRect" parent="."]
anchor_left = 0.584
anchor_top = -0.738
anchor_right = 0.584
anchor_bottom = -0.738
margin_left = -221.916
margin_top = 70.4768
margin_right = 3.08406
margin_bottom = 295.477
rect_scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 76 )
size_flags_horizontal = 15
size_flags_vertical = 15
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "<label>"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/flicker = SubResource( 2 )

[connection signal="pressed" from="." to="." method="_on_pressed"]
